完成订单积分参数获取和设置

--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -6,8 +6,8 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": "Server=localhost;Port=5432;Database=dmz_oms;User Id=postgres;Password=root",
-  "APIGatewayServer": "http://192.168.99.100:1995",
+  "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms;User Id=postgres;Password=root",
+  "APIGatewayServer": "http://testapi.damaozhu.com.cn",
   "JwtSettings": {
     "Issuer": "damaozhu.com.cn",
     "Audience": "damaozhu.com.cn",
@@ -21,11 +21,11 @@
   },
   "ConsulConfig": {
     "Server": {
-      "IP": "192.168.99.100",
+      "IP": "192.168.1.6",
       "Port": "8500"
     },
     "Client": {
-      "IP": "192.168.3.54",
+      "IP": "192.168.1.176",
       "Port": "1996"
     }
   }
