--- a/apps-legacy/ApiServer/Dockerfile
+++ b/apps-legacy/ApiServer/Dockerfile
@@ -4,20 +4,17 @@ EXPOSE 80
 
 FROM microsoft/aspnetcore-build:2.0 AS build
 WORKDIR /src
-COPY ApiServer/ApiServer.csproj ApiServer/
-COPY BambooCore/BambooCore.csproj BambooCore/
-COPY BambooCommon/BambooCommon.csproj BambooCommon/
-COPY ApiModel/ApiModel.csproj ApiModel/
-RUN dotnet restore ApiServer/ApiServer.csproj
+COPY ["apps-legacy/ApiServer/ApiServer.csproj", "apps-legacy/ApiServer/"]
+COPY ["apps-legacy/BambooCore/BambooCore.csproj", "apps-legacy/BambooCore/"]
+COPY ["apps-legacy/BambooCommon/BambooCommon.csproj", "apps-legacy/BambooCommon/"]
+COPY ["apps-legacy/ApiModel/ApiModel.csproj", "apps-legacy/ApiModel/"]
+RUN dotnet restore "apps-legacy/ApiServer/ApiServer.csproj"
 COPY . .
-# COPY ApiServer/wwwroot/AppBackup/navigations.json wwwroot/AppBackup/
-# COPY ApiServer/wwwroot/AppBackup/user-nav-details.json wwwroot/AppBackup/
-# COPY ApiServer/wwwroot/AppBackup/user-navs.json wwwroot/AppBackup/
-WORKDIR /src/ApiServer
-RUN dotnet build ApiServer.csproj -c Release -o /app
+WORKDIR "/src/apps-legacy/ApiServer"
+RUN dotnet build "ApiServer.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish ApiServer.csproj -c Release -o /app
+RUN dotnet publish "ApiServer.csproj" -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
