--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -18,8 +18,8 @@
   },
   //"ConnectionString": "Server=192.168.1.6;Port=1990;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.99.100;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  "ConnectionString": "Server=localhost;Database=dmz_ehome;User Id=postgres;Password=root",
-  //"ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz;User Id=postgres;Password=omega",
+  //"ConnectionString": "Server=localhost;Database=dmz_ehome;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz;User Id=postgres;Password=root",
   "TokenKey": "apiserver secret key here",
   "APIGatewayServer": "http://localhost:1882",
   "ServerId": 1,
@@ -45,7 +45,7 @@
   },
   "ConsulConfig": {
     "Server": {
-      "IP": "localhost",
+      "IP": "192.168.1.6",
       "Port": "8500"
     },
     "Client": {
