--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '3.4'
 
 services:
 
-  apps-base-apigateway:
-    image: apps-base-apigateway:latest
-    build:
-      context: .
-      dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
+  # apps-base-apigateway:
+  #   image: apps-base-apigateway:latest
+  #   build:
+  #     context: .
+  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
   apps-legacy-basic-service:
     image: apps-legacy-basic-service:latest
     build:
-      context: ./apps-legacy
-      dockerfile: ApiServer/Dockerfile
-
-  apps-oms-service:
-    image: apps-oms-service:latest
-    build:
       context: .
-      dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
+      dockerfile: apps-legacy/ApiServer/Dockerfile
+
+  # apps-oms-service:
+  #   image: apps-oms-service:latest
+  #   build:
+  #     context: .
+  #     dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
