--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -8,6 +8,10 @@
   },
   "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms;User Id=postgres;Password=root",
   "APIGatewayServer": "http://testapi.damaozhu.com.cn",
+  "Plugins": {
+    "OrderViewer": "http://testtool.damaozhu.com.cn/dmz-oms/order-viewer",
+    "MediaShare": "http://testtool.damaozhu.com.cn/dmz-hd/share"
+  },
   "JwtSettings": {
     "Issuer": "damaozhu.com.cn",
     "Audience": "damaozhu.com.cn",
