--- a/docker-deploy/company6/.env
+++ b/docker-deploy/company6/.env
@@ -36,3 +36,16 @@ OMSServerDB_EHome=dmz_ehome_oms
 Plugins_OrderViewer_EHome=http://kenntool.damaozhu.com.cn/dmz-oms/order-viewer
 Plugins_MediaShare_EHome=http://kenntool.damaozhu.com.cn/dmz-hd/share
 
+#台湾测试环境
+SECRETKEY_Taiwan=taiwan-develoment-key
+APIGatewayServer_Taiwan=http://twapi.damaozhu.com.cn
+MoreJeeSite_Taiwan=http://twadmin.damaozhu.com.cn
+MoreJeeToolSite_Taiwan=http://twtool.damaozhu.com.cn
+JwtSettings_Issuer_Taiwan=twadmin.damaozhu.com.cn
+JwtSettings_Audience_Taiwan=twadmin.damaozhu.com.cn
+JwtSettings_SecretKey_Taiwan=damaozhu-dev-tw-app
+JwtSettings_ExpiresDay_Taiwan=1
+ServerDB_Taiwan=tw
+OMSServerDB_Taiwan=tw_oms
+Plugins_OrderViewer_Taiwan=http://twtool.damaozhu.com.cn/dmz-oms/order-viewer
+Plugins_MediaShare_Taiwan=http://twtool.damaozhu.com.cn/dmz-hd/share
