--- a/apps-legacy/ApiServer/ApiServer.csproj
+++ b/apps-legacy/ApiServer/ApiServer.csproj
@@ -38,7 +38,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\Account\MemberRegistryController.cs" />
+    <Compile Remove="Controllers\Asset\MailController.cs" />
+    <Compile Remove="Controllers\Order\OrdersController.cs" />
     <Compile Remove="Controllers\UIDesigner\BSModelController.cs" />
+    <Compile Remove="Controllers\Work\WorkFlowController.cs" />
+    <Compile Remove="Controllers\Work\WorkFlowRuleController.cs" />
     <Compile Remove="Data\EntityRepository.cs" />
     <Compile Remove="Data\IEntityRepository.cs" />
     <Compile Remove="Data\RepositoryDefines.cs" />
@@ -104,6 +109,11 @@
     <Content Update="wwwroot\AppBackup\user-navs.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\Order\" />
+    <Folder Include="Controllers\Work\" />
   </ItemGroup>
 
   <ProjectExtensions>
