--- a/apps-oms/Apps.OMS.Data/Apps.OMS.Data.csproj
+++ b/apps-oms/Apps.OMS.Data/Apps.OMS.Data.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\OrderPackage.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\apps-common\Apps.Base.Common\Apps.Base.Common.csproj" />
   </ItemGroup>
 
