修复获取扁平分类信息因为nodetype不一样而不显示异常

--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -18,8 +18,8 @@
   },
   //"ConnectionString": "Server=192.168.1.6;Port=1990;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.99.100;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  "ConnectionString": "Server=localhost;Database=dmz;User Id=postgres;Password=root",
-  //"ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=localhost;Database=dmz;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz;User Id=postgres;Password=root",
   "TokenKey": "apiserver secret key here",
   "APIGatewayServer": "http://localhost:1882",
   "ServerId": 1,
