修复订单包装计算逻辑异常问题

--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms2;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz_oms;User Id=postgres;Password=root",
   "APIGatewayServer": "http://testapi.damaozhu.com.cn",
   "Plugins": {
     "OrderViewer": "http://testtool.damaozhu.com.cn/dmz-oms/order-viewer",
