添加leon测试环境

--- a/docker-deploy/company6/.env
+++ b/docker-deploy/company6/.env
@@ -21,6 +21,19 @@ OMSServerDB_Dev=dmz_oms
 Plugins_OrderViewer_Dev=http://testtool.damaozhu.com.cn/dmz-oms/order-viewer
 Plugins_MediaShare_Dev=http://testtool.damaozhu.com.cn/dmz-hd/share
 
+# 数据整理环境
+SECRETKEY_Leon=leon-production-key
+APIGatewayServer_Leon=http://leonapi.damaozhu.com.cn
+MoreJeeSite_Leon=http://leonadmin.damaozhu.com.cn
+MoreJeeToolSite_Leon=http://leontool.damaozhu.com.cn
+JwtSettings_Issuer_Leon=damaozhu.com.cn
+JwtSettings_Audience_Leon=damaozhu.com.cn
+JwtSettings_SecretKey_Leon=damaozhu-leon-test-app
+JwtSettings_ExpiresDay_Leon=1
+ServerDB_Leon=dmz_leon
+OMSServerDB_Leon=dmz_oms_leon
+Plugins_OrderViewer_Leon=http://leontool.damaozhu.com.cn/dmz-oms/order-viewer
+Plugins_MediaShare_Leon=http://leontool.damaozhu.com.cn/dmz-hd/share
 
 # EHome环境
 SECRETKEY_EHome=ehome-production-key
