完成台北元皿服务器docker-compose配置

--- a/apps-legacy/ApiServer/ApiServer.csproj
+++ b/apps-legacy/ApiServer/ApiServer.csproj
@@ -111,6 +111,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\AppBackup\" />
+  </ItemGroup>
+
   <ProjectExtensions>
     <VisualStudio><UserProperties appsettings_1Development_1json__JSONSchema="" /></VisualStudio>
   </ProjectExtensions>
