--- a/docker-deploy/yuanmin/.env
+++ b/docker-deploy/yuanmin/.env
@@ -1,3 +1,7 @@
+# Docker Hub
+DockerHub_Registry=dockerhub.damaozhu.com.cn:5000
+DockerImage_Tag=yuanmin
+
 # Guid配置信息
 GuidSettings_ServerId=1
 GuidSettings_GuidSalt=1
@@ -8,15 +12,15 @@ PostgresDB_User=postgres
 PostgresDB_Password=root
 
 # 元皿环境配置
-SECRETKEY_YM=company-develoment-key
-APIGatewayServer_YM=http://ymapi.damaozhu.com.cn
-MoreJeeSite_YM=http://ymadmin.damaozhu.com.cn
-MoreJeeToolSite_YM=http://ymtool.damaozhu.com.cn
-JwtSettings_Issuer_YM=damaozhu.com.cn
-JwtSettings_Audience_YM=damaozhu.com.cn
-JwtSettings_SecretKey_YM=damaozhu-dev-ym-app
-JwtSettings_ExpiresDay_YM=1
-ServerDB_YM=dmz
-OMSServerDB_YM=dmz_oms
-Plugins_OrderViewer_YM=http://ymtool.damaozhu.com.cn/dmz-oms/order-viewer
-Plugins_MediaShare_YM=http://ymtool.damaozhu.com.cn/dmz-hd/share
+SECRETKEY=company-yuanmin-key
+APIGatewayServer=http://localhost:9503
+MoreJeeSite=http://localhost:9521
+MoreJeeToolSite=http://localhost:9522
+JwtSettings_Issuer=damaozhu.com.cn
+JwtSettings_Audience=damaozhu.com.cn
+JwtSettings_SecretKey=damaozhu-dev-ym-app
+JwtSettings_ExpiresDay=1
+BasicServerDB=appbasic
+OMSServerDB=appoms
+Plugins_OrderViewer=http://localhost:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://localhost:9522/dmz-hd/share
