--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '3.4'
 
 services:
 
-  apps-base-apigateway:
-    image: apps-base-apigateway:latest
+  app-infrastructure-apigateway:
+    image: ${DockerHub_Registry}/app-infrastructure-apigateway:${DockerImage_Tag}
     build:
       context: .
       dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
-  apps-legacy-basic-service:
-    image: apps-legacy-basic-service:latest
+  app-microservice-basic-api:
+    image: ${DockerHub_Registry}/app-microservice-basic-api:${DockerImage_Tag}
     build:
       context: .
       dockerfile: apps-legacy/ApiServer/Dockerfile
 
-  apps-oms-service:
-    image: apps-oms-service:latest
+  app-microservice-oms-api:
+    image: ${DockerHub_Registry}/app-microservice-oms-api:${DockerImage_Tag}
     build:
       context: .
       dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
