file api添加根据md5查询

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,9 @@ services:
     build:
       context: .
       dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
+
+  basic-api-dev:
+    image: apps-legacy-basic-service:latest
+    build:
+      context: .
+      dockerfile: apps-legacy/ApiServer/Dockerfile
