--- a/docker-deploy/norya/.env
+++ b/docker-deploy/norya/.env
@@ -11,14 +11,14 @@ GuidSettings_GuidMinLen=8
 PostgresDB_User=postgres
 PostgresDB_Password=root
 
-# 元皿环境配置
-SECRETKEY=company-yuanmin-key
+# 环境配置
+SECRETKEY=company-norya-key
 APIGatewayServer=http://localhost:9503
 MoreJeeSite=http://localhost:9521
 MoreJeeToolSite=http://localhost:9522
 JwtSettings_Issuer=damaozhu.com.cn
 JwtSettings_Audience=damaozhu.com.cn
-JwtSettings_SecretKey=damaozhu-dev-ym-app
+JwtSettings_SecretKey=damaozhu-prod-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
