--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -18,9 +18,10 @@
   },
   //"ConnectionString": "Server=192.168.1.6;Port=1990;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.99.100;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  //"ConnectionString": "Server=localhost;Port=9501;Database=appbasic;User Id=postgres;Password=root",
-  "ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz;User Id=postgres;Password=root",
+  "ConnectionString": "Server=localhost;Port=5432;Database=demo;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=192.168.1.6;Port=5700;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.1.6;Port=9700;Database=dmz;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=119.145.104.11;Port=9501;Database=appbasic;User Id=postgres;Password=noryaroot",
   "TokenKey": "apiserver secret key here",
   "APIGatewayServer": "http://localhost:1882",
   "ServerId": 1,
