更改元皿和挪亚家的部署信息

--- a/docker-deploy/norya/.env
+++ b/docker-deploy/norya/.env
@@ -13,14 +13,14 @@ PostgresDB_Password=root
 
 # 环境配置
 SECRETKEY=company-norya-key
-APIGatewayServer=http://localhost:9503
-MoreJeeSite=http://localhost:9521
-MoreJeeToolSite=http://localhost:9522
-JwtSettings_Issuer=damaozhu.com.cn
-JwtSettings_Audience=damaozhu.com.cn
-JwtSettings_SecretKey=damaozhu-prod-app
+APIGatewayServer=http://morejeeapi.norya.cn:9503
+MoreJeeSite=http://morejeeadmin.norya.cn:9521
+MoreJeeToolSite=http://morejeetool.norya.cn:9522
+JwtSettings_Issuer=norya.cn
+JwtSettings_Audience=norya.cn
+JwtSettings_SecretKey=norya-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://localhost:9522/dmz-oms/order-viewer
-Plugins_MediaShare=http://localhost:9522/dmz-hd/share
+Plugins_OrderViewerhttp://morejeetool.norya.cn:9522/dmz-oms/order-viewer
+Plugins_MediaShare=http://morejeetool.norya.cn:9522/dmz-hd/share
