--- a/docker-deploy/yuanmin/.env
+++ b/docker-deploy/yuanmin/.env
@@ -13,14 +13,14 @@ PostgresDB_Password=root
 
 # 元皿环境配置
 SECRETKEY=company-yuanmin-key
-APIGatewayServer=http://localhost:9503
-MoreJeeSite=http://localhost:9521
-MoreJeeToolSite=http://localhost:9522
-JwtSettings_Issuer=damaozhu.com.cn
-JwtSettings_Audience=damaozhu.com.cn
-JwtSettings_SecretKey=damaozhu-dev-ym-app
+APIGatewayServer=http://morejeeapi.ilivingonline.com
+MoreJeeSite=http://morejeeadmin.ilivingonline.com
+MoreJeeToolSite=http://morejeetool.ilivingonline.com
+JwtSettings_Issuer=ilivingonline.com
+JwtSettings_Audience=ilivingonline.com
+JwtSettings_SecretKey=yuanmin-production-app
 JwtSettings_ExpiresDay=1
 BasicServerDB=appbasic
 OMSServerDB=appoms
-Plugins_OrderViewer=http://localhost:9522/dmz-oms/order-viewer
-Plugins_MediaShare=http://localhost:9522/dmz-hd/share
+Plugins_OrderViewer=http://morejeetool.ilivingonline.com/dmz-oms/order-viewer
+Plugins_MediaShare=http://morejeetool.ilivingonline.com/dmz-hd/share
